--- a/ViewModel/ViewModelDemo2/app/src/main/res/layout/activity_main.xml
+++ b/ViewModel/ViewModelDemo2/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
         tools:context=".MainActivity">
 
         <EditText
+            android:id="@+id/number_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
@@ -18,6 +19,7 @@
             android:textSize="35sp" />
 
         <Button
+            android:id="@+id/add_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -26,10 +28,11 @@
             android:textSize="30sp" />
 
         <TextView
+            android:id="@+id/total_sum"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="@string/none"
+            android:text="@string/zero"
             android:textAlignment="center"
             android:textSize="35sp" />
 
