--- a/ViewModel/ViewModelDemo3/app/src/main/res/layout/activity_main.xml
+++ b/ViewModel/ViewModelDemo3/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".MainActivity">
+        tools:context="com.anushka.viewmodeldemo3.MainActivity">
 
         <EditText
             android:id="@+id/number_input"
