--- a/ViewModel_LiveData_with_DataBinding/ViewModel_with_DataBinding/app/src/main/res/layout/activity_main.xml
+++ b/ViewModel_LiveData_with_DataBinding/ViewModel_with_DataBinding/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,13 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+        <variable
+            name="viewModel"
+            type="com.anushka.livedatachallenge.MainActivityViewModel" />
+    </data>
+
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -26,6 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Click Here"
+        android:onClick="@{() -> viewModel.updateCount()}"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
