--- a/ViewModel_LiveData_with_DataBinding/Two_way_databinding_challenge/app/src/main/res/layout/activity_main.xml
+++ b/ViewModel_LiveData_with_DataBinding/Two_way_databinding_challenge/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,12 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="viewModel"
+            type="com.anushka.livedatademo.MainActivityViewModel" />
+    </data>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -12,6 +18,7 @@
             android:id="@+id/number_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="@={viewModel.inputText}"
             android:layout_marginTop="40dp"
             android:autofillHints="Digite aqui um número"
             android:inputType="number"
@@ -22,6 +29,7 @@
             android:id="@+id/add_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="@{() -> viewModel.sumNumberInput()}"
             android:layout_marginTop="10dp"
             android:padding="10dp"
             android:text="@string/add"
@@ -32,7 +40,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="@string/zero"
+            android:text="@{String.valueOf(viewModel.totalSum)}"
             android:textAlignment="center"
             android:textSize="35sp" />
 
