--- a/Navigation_Architecture_Component/NavDemo1/app/src/main/res/layout/fragment_home.xml
+++ b/Navigation_Architecture_Component/NavDemo1/app/src/main/res/layout/fragment_home.xml
@@ -13,7 +13,7 @@
         <!-- TODO: Update blank fragment layout -->
 
         <EditText
-            android:id="@+id/editTextTextPersonName"
+            android:id="@+id/editTextPersonName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
