--- a/Navigation_Architecture_Component/NavDemo1/app/src/main/res/layout/fragment_second.xml
+++ b/Navigation_Architecture_Component/NavDemo1/app/src/main/res/layout/fragment_second.xml
@@ -10,13 +10,13 @@
         android:layout_height="match_parent"
         tools:context=".SecondFragment">
 
-        <EditText
-            android:id="@+id/editTextTextPersonName2"
+        <TextView
+            android:id="@+id/user_name_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textPersonName"
             android:textSize="30sp"
+            android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.491"
