Minha solução final para o desafio de navigation

--- a/Navigation_Architecture_Component/NavDemo5/app/src/main/res/layout/fragment_name.xml
+++ b/Navigation_Architecture_Component/NavDemo5/app/src/main/res/layout/fragment_name.xml
@@ -32,9 +32,10 @@
         android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.265" />
+        app:layout_constraintVertical_bias="0.268" />
 
     <Button
         android:id="@+id/next_button"
