Executando exemplo inicial lifecycleScope

--- a/Coroutines Fundamentals/LifeCycleScopeDemo/app/src/main/res/layout/main_activity.xml
+++ b/Coroutines Fundamentals/LifeCycleScopeDemo/app/src/main/res/layout/main_activity.xml
@@ -4,4 +4,12 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity" />
+    tools:context=".MainActivity" >
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+</FrameLayout>
