--- a/RoomDatabase/app/src/main/res/layout/activity_main.xml
+++ b/RoomDatabase/app/src/main/res/layout/activity_main.xml
@@ -1,64 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="15dp"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <EditText
-        android:id="@+id/name_txt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        android:layout_marginBottom="5dp"
-        android:hint="@string/subscriber_name_hint"
-        android:inputType="textPersonName"
-        android:textSize="18sp"
-        android:textStyle="bold" />
+    <data>
 
-    <EditText
-        android:id="@+id/email_txt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        android:layout_marginBottom="5dp"
-        android:hint="@string/subscriber_email_hint"
-        android:inputType="textEmailAddress"
-        android:textSize="18sp"
-        android:textStyle="bold" />
+        <variable
+            name="myViewModel"
+            type="com.example.roomdemo1.SubscriberViewModel" />
+    </data>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:layout_margin="15dp"
+        android:orientation="vertical"
+        tools:context=".MainActivity">
 
-        <Button
-            android:id="@+id/save_or_update_btn"
-            android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/name_txt"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_weight="1"
+            android:layout_margin="15dp"
+            android:layout_marginBottom="5dp"
+            android:hint="@string/subscriber_name_hint"
+            android:inputType="textPersonName"
+            android:text="@={myViewModel.inputName}"
             android:textSize="18sp"
             android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/clear_all_or_delete_btn"
-            android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/email_txt"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:layout_weight="1"
+            android:layout_margin="15dp"
+            android:layout_marginBottom="5dp"
+            android:hint="@string/subscriber_email_hint"
+            android:inputType="textEmailAddress"
+            android:text="@={myViewModel.inputEmail}"
             android:textSize="18sp"
             android:textStyle="bold" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/save_or_update_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_weight="1"
+                android:onClick="@{()-> myViewModel.saveOrUpdate()}"
+                android:text="@={myViewModel.saveOrUpdateBtnTxt}"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/clear_all_or_delete_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:layout_weight="1"
+                android:onClick="@{()-> myViewModel.clearAllOrDelete()}"
+                android:text="@={myViewModel.clearAllOrDeleteBtnTxt}"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/subscriber_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp" />
     </LinearLayout>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/subscriber_recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp" />
-</LinearLayout>
+</layout>
