--- a/RoomDatabase/app/src/main/res/layout/activity_main.xml
+++ b/RoomDatabase/app/src/main/res/layout/activity_main.xml
@@ -74,7 +74,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/subscriber_recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp" />
+            android:layout_height="match_parent"
+            android:layout_margin="10dp" />
     </LinearLayout>
 </layout>
