--- a/RoomDatabase/app/src/main/res/layout/list_item.xml
+++ b/RoomDatabase/app/src/main/res/layout/list_item.xml
@@ -9,6 +9,7 @@
         android:orientation="vertical">
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/list_item_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clickable="true"
