--- a/RecycleView/app/src/main/res/layout/list_item.xml
+++ b/RecycleView/app/src/main/res/layout/list_item.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="60dp"
     android:layout_margin="30dp"
+    android:id="@+id/btn_container"
     android:background="@color/design_default_color_primary">
 
     <TextView
