--- a/MVVM_CLEAN_CODE_PROJECT_TWO/app/src/main/res/layout/fragment_news.xml
+++ b/MVVM_CLEAN_CODE_PROJECT_TWO/app/src/main/res/layout/fragment_news.xml
@@ -3,10 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/layout_background"
     tools:context=".NewsFragment">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclew_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="news fragment" />
+        tools:listitem="@layout/news_list_item" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone" />
 </FrameLayout>
