--- a/MVVM_CLEAN_CODE_PROJECT_TWO/app/src/main/res/layout/fragment_news.xml
+++ b/MVVM_CLEAN_CODE_PROJECT_TWO/app/src/main/res/layout/fragment_news.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/layout_background"
-    tools:context=".NewsFragment">
+    tools:context=".presentation.NewsFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclew_view"
