--- a/MVVM_CLEAN_CODE_PROJECT_TWO/app/src/main/res/layout/fragment_news.xml
+++ b/MVVM_CLEAN_CODE_PROJECT_TWO/app/src/main/res/layout/fragment_news.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="@color/layout_background"
     tools:context=".presentation.NewsFragment">
+
+    <SearchView
+        android:id="@+id/searchView"
+        android:layout_width="match_parent"
+        android:background="@color/white"
+        android:layout_height="wrap_content" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclew_view"
@@ -19,4 +26,4 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone" />
-</FrameLayout>
+</LinearLayout>
