--- a/MVVM_CLEAN_CODE_PROJECT_TWO/app/src/main/res/layout/fragment_news_info.xml
+++ b/MVVM_CLEAN_CODE_PROJECT_TWO/app/src/main/res/layout/fragment_news_info.xml
@@ -1,13 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".presentation.NewsInfoFragment">
 
     <WebView
         android:id="@+id/webview_info"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-</LinearLayout>
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="50dp"
+        app:layout_constraintBottom_toBottomOf="@id/webview_info"
+        app:layout_constraintEnd_toEndOf="@id/webview_info"
+        android:layout_height="wrap_content"
+        android:layout_gravity=""
+        android:clickable="true"
+        android:src="@android:drawable/ic_input_add" />
+</androidx.constraintlayout.widget.ConstraintLayout>
