Implementando Exibir itens salvos no SavedNewsFragment

--- a/MVVM_CLEAN_CODE_PROJECT_TWO/app/src/main/res/layout/fragment_saved_news.xml
+++ b/MVVM_CLEAN_CODE_PROJECT_TWO/app/src/main/res/layout/fragment_saved_news.xml
@@ -3,10 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/layout_background"
     tools:context=".presentation.SavedNewsFragment">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclew_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="saved news fragment" />
+        tools:listitem="@layout/news_list_item" />
 </FrameLayout>
